# funkin_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/crystal/assets/: png.h
include/crystal/core/: engine.h
include/funkin/scene/: title_screen.h
src/: main.cpp
src/crystal/assets/: image.cpp
src/crystal/core/: engine.cpp  engine.h  file_system.cpp
src/crystal/core/audio/: audio_server.cpp
src/crystal/core/rendering/: rendering_server.cpp
src/funkin/debug/: console_debug_info.cpp
src/funkin/scene/: title_screen.cpp
